--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -9,3 +9,5 @@
 @import "../components/Admin/admin";
 @import "../components/Admin/Navigation/navigation";
 @import "../components/Admin/Dashboard/adminDashboard";
+@import "../components/Admin/TopSearch/topSearch";
+@import "../components/Admin/Product/adminProducts";
