--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -16,3 +16,7 @@ $black: rgb(43, 52, 69);
 $background-white: #f6f9fc;
 $light-gray: rgb(139, 138, 138);
 $dark-gray: #5f6c71;
+$admin-light-bg: #f3f4f6;
+$admin-card-bg: #ffffff;
+$admin-text: #1c1c1c;
+$admin-dark: #5f6c71;
