--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1424,4 +1424,99 @@ ul li {
 .productsList {
   padding: 0px 50px;
 }
+
+.productCreate {
+  padding: 30px;
+}
+
+.productCreate > p {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.productCreate__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 150px;
+  padding: 50px 0px;
+  border-top: 1px dashed lightgray;
+  border-bottom: 1px dashed lightgray;
+}
+
+.productCreate__box > div:nth-of-type(1) > p {
+  color: #1c1c1c;
+  font-weight: 500;
+}
+
+.productCreate__box > div:nth-of-type(1) small {
+  color: #1c1c1c;
+}
+
+.productCreate__box > div:nth-of-type(2) {
+  -webkit-box-flex: 0.9;
+      -ms-flex: 0.9;
+          flex: 0.9;
+  background-color: #ffffff;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 5px;
+  padding: 30px 20px;
+}
+
+.productCreate .upload__image-wrapper > div:nth-of-type(1) > button {
+  width: 100%;
+  height: 200px;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 2px dashed lightgray;
+  background: none;
+}
+
+.productCreate .upload__image-wrapper > div:nth-of-type(1) > button span {
+  color: #e94560;
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0px 10px;
+}
+
+.productCreate .upload__image-wrapper .image-item-wrapper {
+  padding-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.productCreate .upload__image-wrapper .image-item-wrapper .image-item {
+  position: relative;
+}
+
+.productCreate .upload__image-wrapper .image-item-wrapper .image-item .image-item__btn-wrapper {
+  position: absolute;
+  top: -25px;
+  right: 0px;
+}
+
+.productCreate .upload__image-wrapper .image-item-wrapper .image-item .image-item__btn-wrapper button {
+  background: red;
+  border: none;
+  cursor: pointer;
+  color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
 /*# sourceMappingURL=App.css.map */
