--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -15,3 +15,4 @@
 @import "../components/Profile/Order/order";
 @import "../components/Home/Banner/topBanner";
 @import "../components/navbar/BottomNavbar/bottomNavbar";
+@import "../pages/search";
