--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -1,56 +1,74 @@
 //Breakpoints
 @media (min-width: 64em) {
-    //styles go here
+  //styles go here
 }
 
 //640px 1024px 1400px
 $breakpoints-up: (
-    "medium": "40em",
-    "large": "64em",
-    "xlarge": "87.5em",
+  "medium": "40em",
+  "large": "64em",
+  "xlarge": "87.5em",
 );
 
 //639px 1023px 1399px
 $breakpoints-down: (
-    "small": "39.9375em",
-    "medium": "63.9375em",
-    "large": "87.4375em",
+  "small": "39.9375em",
+  "medium": "63.9375em",
+  "large": "87.4375em",
 );
 
 @mixin breakpoint-up($size) {
-    @media (min-width: map-get($breakpoints-up,$size)) {
-        @content;
-    }
+  @media (min-width: map-get($breakpoints-up,$size)) {
+    @content;
+  }
 }
 
 @mixin breakpoint-down($size) {
-    @media (max-width: map-get($breakpoints-down,$size)) {
-        @content;
-    }
+  @media (max-width: map-get($breakpoints-down,$size)) {
+    @content;
+  }
 }
 
 // Convert px to rem
 @mixin toRem($property, $value) {
-    #{$property}: ($value / 16) + rem;
+  #{$property}: ($value / 16) + rem;
 }
 
 // cart position
 @mixin cartPosition($width) {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: $width;
-    height: 100vh;
-    background: rgb(255, 255, 255);
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: $width;
+  height: 100vh;
+  background: rgb(255, 255, 255);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
 }
 
 @mixin basicBtn($bgColor) {
-    background-color: $bgColor;
-    border-radius: 8px;
-    padding: 12px 0;
-    color: #fff;
-    border: 1px solid $bgColor;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
+  background-color: $bgColor;
+  border-radius: 8px;
+  padding: 12px 0;
+  color: #fff;
+  border: 1px solid $bgColor;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  &:hover {
+    background-color: #fff;
+    color: $red;
+  }
+}
+
+@mixin basicBtnSecond($bgColor) {
+  background-color: $bgColor;
+  border-radius: 8px;
+  padding: 12px 0;
+  color: $red;
+  border: 1px solid $red;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  &:hover {
+    background-color: #ffe1e1;
+    color: $red;
+  }
 }
