--- a/client/src/components/SideCart/_sideBarCart.scss
+++ b/client/src/components/SideCart/_sideBarCart.scss
@@ -160,7 +160,8 @@
     }
 }
 .gray{
-    background-color: rgba(128, 128, 128, 0.282);
+    background-color: rgba(125, 135, 156, 0.293);
+    color: rgb(125, 135, 156)!important;
 }
 .sidebar--cart--backdrop {
     @include cartPosition(100vw);
