--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -21,3 +21,4 @@
 @import "../components/Admin/Dashboard/adminDashboard";
 @import "../components/Admin/TopSearch/topSearch";
 @import "../components/Admin/Product/adminProducts";
+@import "../pages/wishlist";
