cart page added

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -8,17 +8,21 @@
 @import "../components/Modal/RegistrationModal/registration";
 @import "../components/Modal/ProductDetailsModal/productDetailsModal";
 @import "../components/AlertBox/alertBox";
-@import "../pages/profile";
+@import "../pages/Profile/profile";
 @import "../components/LoadingSpiner/loadingSpinner";
 @import "../components/Profile/Address/address";
 @import "../components/Profile/Information/information";
 @import "../components/Profile/Order/order";
 @import "../components/Home/Banner/topBanner";
 @import "../components/navbar/BottomNavbar/bottomNavbar";
-@import "../pages/search";
+@import "../pages/Search/search";
 @import "../components/Admin/admin";
 @import "../components/Admin/Navigation/navigation";
 @import "../components/Admin/Dashboard/adminDashboard";
 @import "../components/Admin/TopSearch/topSearch";
 @import "../components/Admin/Product/adminProducts";
-@import "../pages/wishlist";
+@import "../pages/WishList/wishlist";
+@import "../components/Checkout/CartItem/cartItem";
+@import "../pages/Checkout/Cart/cart";
+@import "../pages/Checkout/Details/details";
+@import "../pages/Checkout/Payment/payment";
