--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -48,7 +48,7 @@ $breakpoints-down: (
 @mixin basicBtn($bgColor) {
   background-color: $bgColor;
   border-radius: 8px;
-  padding: 12px 0;
+  padding: 12px;
   color: #fff;
   border: 1px solid $bgColor;
   cursor: pointer;
