theme color updated

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -8,6 +8,7 @@
 @import "../components/Modal/RegistrationModal/registration";
 @import "../components/Modal/ProductDetailsModal/productDetailsModal";
 @import "../components/AlertBox/alertBox";
+@import "../components/Card/card";
 @import "../pages/Profile/profile";
 @import "../components/LoadingSpiner/loadingSpinner";
 @import "../components/Profile/Address/address";
