--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,15 +1,3 @@
-// //colors
-// $darkBlue: hsl(233, 26%, 24%);
-// $limeGreen: hsl(136, 65%, 51%);
-// $brightCyan: hsl(192, 70%, 51%);
-// $grayishBlue: hsl(233, 8%, 62%);
-// $lightGrayishBlue: hsl(220, 16%, 96%);
-// $veryLightGray: hsl(0, 0%, 98%);
-// $white: hsl(0, 0%, 100%);
-
-// //font-sizes
-// $font-md: 1.125rem; //18px
-// $font-sm: 0.875rem; //14px
 $blue: #0f3460;
 $red: #e94560;
 $black: rgb(43, 52, 69);
@@ -25,3 +13,4 @@ $admin-light-bg: #f3f4f6;
 $admin-card-bg: #ffffff;
 $admin-text: #1c1c1c;
 $admin-dark: #5f6c71;
+$background-white-hover: #e2ecf5;
