--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -27,3 +27,4 @@
 @import "../pages/Checkout/Cart/cart";
 @import "../pages/Checkout/Details/details";
 @import "../pages/Checkout/Payment/payment";
+@import "../components/Checkout/PriceInfo/priceInfo";
