cart page update

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -28,3 +28,4 @@
 @import "../pages/Checkout/Details/details";
 @import "../pages/Checkout/Payment/payment";
 @import "../components/Checkout/PriceInfo/priceInfo";
+@import "../components/Checkout/CheckoutProgess/checkoutProgress";
