--- a/client/src/pages/Checkout/Cart/_cart.scss
+++ b/client/src/pages/Checkout/Cart/_cart.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     gap: 20px;
     align-items: flex-start;
-    padding: 1.5rem 1.75rem;
+    padding: 1.5rem 0;
     min-height: 65vh;
     .cart-item--wrapper{
         flex: 2;
