--- a/client/src/components/Admin/Product/_adminProducts.scss
+++ b/client/src/components/Admin/Product/_adminProducts.scss
@@ -48,7 +48,7 @@
           border: 2px dashed lightgray;
           background: none;
           span {
-            color: $red;
+            color: $themeColor;
             font-size: 16px;
             font-weight: 700;
             margin: 0px 10px;
