--- a/client/src/components/LoadingSpiner/_loadingSpinner.scss
+++ b/client/src/components/LoadingSpiner/_loadingSpinner.scss
@@ -10,7 +10,7 @@
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background: $red;
+    background: $themeColor;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .spinner div:nth-child(1) {
