--- a/client/src/pages/Profile/_profile.scss
+++ b/client/src/pages/Profile/_profile.scss
@@ -6,7 +6,7 @@
         font-weight: 600;
         color: #808080;
         & > span {
-            color: $red;
+            color: $themeColor;
         }
     }
     .profile--header {
