--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,5 +1,7 @@
+// $blue: #0f3460;
+// $themeColor: #e94560;
 $blue: #0f3460;
-$red: #e94560;
+$themeColor: #0f3460;
 $black: rgb(43, 52, 69);
 $background-white: #f6f9fc;
 $light-gray: rgb(139, 138, 138);
