--- a/client/src/components/Checkout/CheckoutProgress/_checkoutProgress.scss
+++ b/client/src/components/Checkout/CheckoutProgress/_checkoutProgress.scss
@@ -6,31 +6,31 @@
     div:nth-child(1),
     div:nth-child(3),
     div:nth-child(5){
-        background-color: rgba($red, .2);
-        color: $red;
+        background-color: rgba($themeColor, .2);
+        color: $themeColor;
         padding: 6px 20px;
         border-radius: 30px;
         font-weight: 600;
         font-size: 14px;
-        border: 2px solid rgba($red, .2);
+        border: 2px solid rgba($themeColor, .2);
         cursor: pointer;
     }
     div:nth-child(1){
-        background-color: $red;
+        background-color: $themeColor;
         color: #fff;
     }
     div:nth-child(2),
     div:nth-child(4){
-        background-color: rgba($red, .2);
+        background-color: rgba($themeColor, .2);
         height: 3px;
         width: 60px;
     }
     .active{
-        background-color: $red!important;
-        border: 2px solid $red!important;
+        background-color: $themeColor!important;
+        border: 2px solid $themeColor!important;
         color: #fff!important;
     }
     .line--active{
-        background-color: $red!important;
+        background-color: $themeColor!important;
     }
 }
