--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -20,7 +20,7 @@
                 padding: 0.4rem;
             }
             :hover {
-                color: $red;
+                color: $themeColor;
             }
         }
     }
@@ -69,7 +69,7 @@
                         font-size: 14px;
                         &:hover {
                             background: $background-white;
-                            color: $red;
+                            color: $themeColor;
                             cursor: pointer;
                         }
                     }
@@ -142,7 +142,7 @@
                             font-size: 14px;
                             &:hover {
                                 background: $background-white;
-                                color: $red;
+                                color: $themeColor;
                                 cursor: pointer;
                             }
                         }
@@ -158,7 +158,7 @@
                     border: 1px solid black;
                 }
                 &:focus-within {
-                    border: 0.2px solid $red;
+                    border: 0.2px solid $themeColor;
                 }
             }
         }
@@ -205,7 +205,7 @@
                 font-size: x-small;
                 padding: 0.2rem;
                 border-radius: 50%;
-                background-color: $red;
+                background-color: $themeColor;
                 color: #f6f9fc;
                 top: -7px;
                 right: -5px;
@@ -240,11 +240,11 @@
                     padding: 5px 15px 8px 8px;
                     cursor: pointer;
                     &:hover {
-                        color: $red;
+                        color: $themeColor;
                         & > span {
                             & > svg {
                                 path {
-                                    fill: $red;
+                                    fill: $themeColor;
                                 }
                             }
                         }
