--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -55,7 +55,7 @@ input::-webkit-inner-spin-button {
 }
 
 .btn-primary {
-  background-color: $red;
+  background-color: $themeColor;
   color: white;
   border: none;
   outline: none;
@@ -99,7 +99,7 @@ input::-webkit-inner-spin-button {
   th {
     padding: 10px;
     text-align: left;
-    background-color: $red;
+    background-color: $themeColor;
     color: white;
     margin: 0px;
     border: none;
@@ -119,7 +119,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   justify-content: flex-end;
   background-color: $admin-card-bg;
-  border-bottom: 2px solid $red;
+  border-bottom: 2px solid $themeColor;
 }
 }
 
