--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -29,3 +29,4 @@
 @import "../pages/Checkout/Payment/payment";
 @import "../components/Checkout/PriceInfo/priceInfo";
 @import "../components/Checkout/CheckoutProgress/checkoutProgress";
+@import "../components/footer/footer";
