--- a/client/src/pages/Checkout/Details/_details.scss
+++ b/client/src/pages/Checkout/Details/_details.scss
@@ -69,6 +69,9 @@
             flex-wrap: wrap;
             margin-top: 2rem;
             gap: 20px;
+            & > button {
+                flex: 1;
+            }
         }
         .submit-btn {
             color: #fff;
