--- a/client/src/components/SideCart/_sideBarCart.scss
+++ b/client/src/components/SideCart/_sideBarCart.scss
@@ -44,7 +44,7 @@
                         font-weight: 700;
                         color: $themeColor;
                         border-radius: 50%;
-                        box-shadow: 0 0 2px rgba(233, 69, 96, 0.816);
+                        box-shadow: 0 0 2px rgba($themeColor, 0.816);
                         transition: 0.2s ease-in-out;
                         user-select: none;
                         cursor: pointer;
