--- a/client/src/components/Admin/Dashboard/_adminDashboard.scss
+++ b/client/src/components/Admin/Dashboard/_adminDashboard.scss
@@ -5,27 +5,11 @@
   }
   // individual class
   &__top {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    gap: 2vw;
-    &__left {
-      h1 {
-        color: $admin-dark;
-        letter-spacing: 2px;
-      }
-      p {
-        color: $admin-text;
-        &:nth-of-type(1) {
-          font-size: 40px;
-          letter-spacing: 2px;
-        }
-        &:nth-of-type(2) {
-          margin: 20px 0px;
-          line-height: 160%;
-        }
-      }
-    }
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
     &__right {
+      width: 100%;
       &__stat {
         display: flex;
         align-items: center;
@@ -36,8 +20,9 @@
           display: flex;
           gap: 10px;
           align-items: center;
-          justify-content: center;
-          padding: 40px 30px;
+          justify-content: space-between;
+          padding: 30px;
+          border-radius: 8px;
           .MuiSvgIcon-root {
             font-size: 70px;
             padding: 15px;
@@ -61,8 +46,13 @@
               background-color: #ffe8b2;
             }
           }
+          &:nth-of-type(4) {
+            .MuiSvgIcon-root {
+              color: #1683ff;
+              background-color: #1683ff57;
+            }
+          }
           > div {
-            flex: 1;
             color: $admin-text;
 
             p {
@@ -84,8 +74,9 @@
     gap: 20px;
     > div {
       flex: 1;
-      padding: 20px 10px;
+      padding: 20px 30px;
       background-color: white;
+      border-radius: 8px;
       > div {
         margin-bottom: 30px;
         > p {
