--- a/client/src/components/Admin/Navigation/_navigation.scss
+++ b/client/src/components/Admin/Navigation/_navigation.scss
@@ -2,18 +2,27 @@
   background-color: $admin-card-bg;
   height: 100vh;
   min-width: 200px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  padding: 30px 20px;
+  box-shadow: rgba($themeColor, 0.16) 0px 1px 4px;
+  padding: 20px;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  position: sticky;
+  top: 0;
+  left: 0;
   overflow-y: auto;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  > img {
-    width: 120px;
+  .admin--logo{
+    display: flex;
+    justify-content:center ;
+    width: 100%;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba($themeColor, 0.16);
+    > img {
+    max-width: 150px;
     text-align: center;
   }
+  }
+  
   &__menu {
     width: 100%;
     padding: 30px 0px;
@@ -34,8 +43,9 @@
         }
       }
       &.active {
-        background-color: $admin-light-bg;
-        border-radius: 10px;
+        background-color: rgba($themeColor, 0.1);
+        border: 1px solid rgba($themeColor, 0.3);
+        border-radius: 6px;
 
         span {
           color: $themeColor !important;
@@ -63,8 +73,8 @@
         }
       }
       &:hover {
-        border-radius: 10px;
-        background-color: $admin-light-bg;
+        border-radius: 6px;
+        background-color: rgba($themeColor, 0.05);
       }
       > span {
         display: flex;
@@ -83,9 +93,12 @@
 }
 
 .admin__topNav {
-  padding: 30px 50px;
+  padding: 15px 30px;
+  // margin: 20px;
   display: flex;
   justify-content: flex-end;
+  background-color: #fff;
+  border-radius: 8px;
   &__right {
     display: flex;
     align-items: center;
@@ -122,7 +135,7 @@
         }
         &:nth-of-type(2) {
           position: absolute;
-          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+          box-shadow: rgba($themeColor, 0.2) 0px 2px 8px 0px;
           background-color: $admin-card-bg;
           padding: 20px 0px;
           left: 90%;
