--- a/client/src/components/Admin/TopSearch/_topSearch.scss
+++ b/client/src/components/Admin/TopSearch/_topSearch.scss
@@ -1,11 +1,11 @@
 .topSearch {
   background-color: $admin-card-bg;
   margin-bottom: 30px;
-  padding: 20px 10px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  padding: 20px;
+  box-shadow: rgba($themeColor, 0.16) 0px 1px 4px;
   display: flex;
-  gap: 300px;
   justify-content: space-between;
+  border-radius: 6px;
   form {
     flex: 1;
     display: flex;
@@ -14,11 +14,14 @@
     border: 1px solid lightgray;
     max-width: 700px;
     padding: 5px 7px;
+    border-radius: 4px;
+    max-width: 300px;
     input {
       width: 100%;
       border: none;
       outline: none;
       padding: 0px 5px;
+      
     }
   }
 }
